# rt2_assignment_1

./: CMakeLists.txt  README.md
docs/: Doxyfile
launch/: launch_gazebo.launch
models/pioneer_rt2/: pioneer_rt2.lua
scripts/: go_to_point.py  user_interface.py
shell/: commands.sh  commands.txt  shell_bridge.sh  shell_build.sh  shell_build_ws_only.sh  shell_clean.sh
shell/test/: win1a.sh  win1b.sh  win1c.sh  win2.sh  win3.sh  win4.sh  win5.sh  win_ros1.sh  win_ros2.sh  win_ros_master.sh  win_user_interface.sh
src/: dummy_action_client.cpp  position_service.cpp  state_machine.cpp
ws_bridge/: build_bridge_base.sh  clean_bridge_ws.sh
ws_ros1/: build.sh  clean_ros1_ws.sh
ws_ros1/src/ros1_bridge_support_pkg/: CMakeLists.txt  package.xml
ws_ros1/src/ros1_bridge_support_pkg/src/: ros1_bridge_support_node.cpp
ws_ros1/src/rt2_assignment1/launch/: launch_gazebo.launch  sim_bridge.launch
ws_ros2/: build.sh  clean_ros2_ws.sh
ws_ros2/src/ros2_bridge_support_pkg/: CMakeLists.txt  package.xml
ws_ros2/src/ros2_bridge_support_pkg/src/: ros2_bridge_support_node.cpp
ws_ros2/src/rt2_assignment_1/: CMakeLists.txt  package.xml
ws_ros2/src/rt2_assignment_1/src/: position_service.cpp  state_machine.cpp
ws_ros2/src/rt2_assignment_1/srv/: Command.srv  Position.srv  RandomPosition.srv
